@startuml State Machine Diagram - Device States
!theme plain
skinparam state {
  BackgroundColor #E8F4F8
  BorderColor #2E5C8A
  FontColor #000
}

[*] --> Offline : Device not connected

state "Offline\n\nNo network activity\nNot visible in network" as Offline #LightGray

Offline --> Active : Device connects\nand sends traffic
Offline --> Idle : Device connects\nbut no traffic

state "Active\n\nSending/receiving data\nNormal communication\nLast seen < 5 minutes" as Active #LightGreen

Active --> Idle : No traffic for\n5+ minutes
Active --> Blocked : Administrator blocks\nor auto-block triggered
Active --> Offline : Device disconnects

state "Idle\n\nConnected but inactive\nNo recent traffic\nLast seen > 5 minutes" as Idle #LightYellow

Idle --> Active : Traffic resumes
Idle --> Blocked : Administrator blocks\nor anomaly detected
Idle --> Offline : Device disconnects

state "Blocked\n\nFirewall rule active\nnftables blocking traffic\nis_blocked = true\nStatus = BLOCKED" as Blocked #LightCoral

Blocked --> Active : Administrator unblocks
Blocked --> Offline : Device disconnects

note right of Active
  <b>Normal Operation State</b>
  Device is communicating
  normally with network.
end note

note right of Blocked
  <b>Security Enforcement State</b>
  Device cannot communicate
  due to firewall rules.
end note

note right of Idle
  <b>Low Activity State</b>
  Device is connected but
  not actively communicating.
end note

note right of Offline
  <b>Disconnected State</b>
  Device is not connected
  to the network.
end note

@enduml

